Upgrade to commons lang3
* Replace StringUtils where appropriate
* Replace IntRange with Range<Integer>
* Replace NotImplementedException with UnsupportedOperationException
* Drop dependency where no longer used